[gd_scene load_steps=27 format=3 uid="uid://b3mtgog05gg4t"]

[ext_resource type="PackedScene" uid="uid://bnc528scgy74q" path="res://Scenes/character.tscn" id="1_1i5q3"]
[ext_resource type="Script" path="res://Scripts/teste.gd" id="1_eighr"]
[ext_resource type="PackedScene" uid="uid://cdi6l5l23fsaf" path="res://Models/old_couch.glb" id="3_mn463"]
[ext_resource type="Texture2D" uid="uid://cacksjooxeqdx" path="res://Materials/wood_planks_diff_2k.jpg" id="4_dehut"]
[ext_resource type="PackedScene" uid="uid://qudpx7qe0dtg" path="res://Models/fancy_victorian_square_picture_frame.glb" id="5_bu366"]
[ext_resource type="PackedScene" uid="uid://cpyabgc3i42v4" path="res://Models/fancy_victorian_flower_frame.glb" id="7_jk0xn"]
[ext_resource type="AudioStream" uid="uid://wbk6sw7klfg8" path="res://Sounds/doorOpen.wav" id="8_lixon"]
[ext_resource type="PackedScene" uid="uid://cuvqsaqnggsne" path="res://Models/wooden_door.glb" id="9_dlhrp"]
[ext_resource type="PackedScene" uid="uid://bqcconlqdvyc3" path="res://Models/modern_ceiling_lamp.glb" id="9_gi00w"]
[ext_resource type="PackedScene" uid="uid://cyjkyi5hf2vwx" path="res://Models/antique_chandelier.glb" id="10_tw5j8"]
[ext_resource type="PackedScene" uid="uid://643weak2cche" path="res://Models/bed.glb" id="11_e8ajb"]

[sub_resource type="Environment" id="Environment_ig37q"]
background_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_88fij"]
albedo_texture = ExtResource("4_dehut")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3llmw"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s8cki"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_omhl7"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k6fqo"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ou1b4"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mk5wu"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wfxft"]
albedo_texture = ExtResource("4_dehut")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lfe3c"]
albedo_texture = ExtResource("4_dehut")
uv1_triplanar = true

[sub_resource type="Animation" id="Animation_g5g6w"]
resource_name = "DoorOpen"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.59691, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_x3meo"]
resource_name = "DoorOpenSlow"
length = 2.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.59698, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.5)
}

[sub_resource type="Animation" id="Animation_uqerf"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ydte"]
_data = {
"DoorOpen": SubResource("Animation_g5g6w"),
"DoorOpenSlow": SubResource("Animation_x3meo"),
"RESET": SubResource("Animation_uqerf")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_4uh4a"]
size = Vector3(1.71859, 1.50686, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_eighr")

[node name="Node3D" parent="." instance=ExtResource("1_1i5q3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.558255, 8.20827, 3.02988)
collision_layer = 17
collision_mask = 17

[node name="environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="environment"]
environment = SubResource("Environment_ig37q")

[node name="old_couch" parent="." instance=ExtResource("3_mn463")]
transform = Transform3D(-0.0149933, 0.000443555, -7.36204e-05, 0.000437143, 0.014955, 0.0010754, 0.000105199, 0.00107277, -0.0149612, -8.19141, 4.35895, 2.91668)

[node name="manFrame" parent="." instance=ExtResource("5_bu366")]
transform = Transform3D(0.000200727, 0, 0.5, 0, 0.5, 0, -0.5, 0, 0.000200727, -4.01416, 10.0466, 4.26547)

[node name="womanFrame" parent="." instance=ExtResource("7_jk0xn")]
transform = Transform3D(0.00997392, 0, 0.499901, 0, 0.5, 0, -0.499901, 0, 0.00997392, -5.18483, 10.1014, 4.29005)

[node name="room" type="Node3D" parent="."]

[node name="floor" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.33695, 7.93075, -3.503)
use_collision = true
size = Vector3(8.55038, 0.0493718, 15.7761)
material = SubResource("StandardMaterial3D_88fij")

[node name="floor2" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2149, 7.92049, -3.503)
use_collision = true
size = Vector3(8.55038, 0.0493718, 15.7761)
material = SubResource("StandardMaterial3D_88fij")

[node name="floor6" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.44343, 4.29419, -3.503)
use_collision = true
size = Vector3(8.07654, 0.0493718, 15.7761)
material = SubResource("StandardMaterial3D_88fij")

[node name="floor4" type="CSGBox3D" parent="room"]
transform = Transform3D(0.00312419, 0, -0.999995, 0, 1, 0, 0.999995, 0, 0.00312419, -14.2435, 7.91739, 2.83133)
use_collision = true
size = Vector3(2.89281, 0.0493718, 5.59763)
material = SubResource("StandardMaterial3D_88fij")

[node name="floor3" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2493, 12.291, -3.503)
use_collision = true
size = Vector3(8.55038, 0.0493718, 15.7761)
material = SubResource("StandardMaterial3D_88fij")

[node name="floor5" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.4057, 12.291, -3.503)
use_collision = true
size = Vector3(5.76926, 0.0447323, 15.7761)
material = SubResource("StandardMaterial3D_88fij")

[node name="backwall" type="CSGBox3D" parent="room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29838, 10.0805, 4.37304)
use_collision = true
size = Vector3(8.59838, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_3llmw")

[node name="backwall2" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00256566, -2.82542, 10.1123, -1.33492)
use_collision = true
size = Vector3(11.2938, 4.1398, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall12" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00256566, -13.6164, 10.0805, -4.98848)
use_collision = true
size = Vector3(12.8677, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall14" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00256566, -5.36193, 5.69493, -3.59543)
use_collision = true
size = Vector3(15.7456, 4.39403, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall15" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00256566, -13.5742, 5.73969, -3.59543)
use_collision = true
size = Vector3(15.7456, 4.11531, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall16" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999936, 0, 0.0113096, 0, 1, 0, -0.0113096, 0, -0.999936, -8.88288, 5.73969, -11.3529)
use_collision = true
size = Vector3(15.7456, 4.42471, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall17" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999936, 0, 0.0113096, 0, 1, 0, -0.0113096, 0, -0.999936, -8.88288, 5.73969, 4.32292)
use_collision = true
size = Vector3(15.7456, 4.42471, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall7" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999793, 0, 0.0203841, 0, 1, 0, -0.0203841, 0, -0.999793, -7.04765, 10.0805, 4.33284)
use_collision = true
size = Vector3(8.74725, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall9" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999793, 0, 0.0203841, 0, 1, 0, -0.0203841, 0, -0.999793, -14.1922, 10.0805, 4.17695)
use_collision = true
size = Vector3(5.84806, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall11" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999793, 0, 0.0203841, 0, 1, 0, -0.0203841, 0, -0.999793, -15.3815, 10.0805, 1.44791)
use_collision = true
size = Vector3(3.79699, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall13" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999793, 0, 0.0203841, 0, 1, 0, -0.0203841, 0, -0.999793, -12.5317, 10.0805, -11.4296)
use_collision = true
size = Vector3(2.35197, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall10" type="CSGBox3D" parent="room"]
transform = Transform3D(0.0202445, 0, 0.999796, 0, 1, 0, -0.999796, 0, 0.0202445, -17.0612, 10.0805, 2.79315)
use_collision = true
size = Vector3(2.77032, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall8" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.999793, 0, 0.0203841, 0, 1, 0, -0.0203841, 0, -0.999793, -7.04765, 10.0805, -11.2812)
use_collision = true
size = Vector3(8.74725, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_s8cki")

[node name="backwall4" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00256566, -2.82491, 11.5818, -9.06116)
use_collision = true
size = Vector3(4.18793, 1.55569, 0.054661)
material = SubResource("StandardMaterial3D_omhl7")

[node name="backwall6" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0.999964, -0.00811572, -0.00256558, -0.0081157, -0.999967, 2.08222e-05, -2.82542, 9.34964, -9.87311)
use_collision = true
size = Vector3(2.90053, 2.49546, 0.054661)
material = SubResource("StandardMaterial3D_k6fqo")

[node name="backwall3" type="CSGBox3D" parent="room"]
transform = Transform3D(-0.00256566, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00256566, 5.60447, 10.0805, -3.55579)
use_collision = true
size = Vector3(15.8009, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_ou1b4")

[node name="backwall5" type="CSGBox3D" parent="room"]
transform = Transform3D(0.999312, 0, 0.0370797, 0, 1, 0, -0.0370797, 0, 0.999312, 1.50728, 10.1233, -11.3326)
use_collision = true
size = Vector3(8.72494, 4.56053, 0.054661)
material = SubResource("StandardMaterial3D_mk5wu")

[node name="ceiling" type="CSGBox3D" parent="room"]
transform = Transform3D(0.999985, 3.1159e-05, -0.00542802, -0.00542806, 0.000732431, -0.999985, -2.71829e-05, 1, 0.000732589, 1.31423, 12.2775, -3.62293)
use_collision = true
size = Vector3(9.00019, 16.8619, 0.054661)
material = SubResource("StandardMaterial3D_wfxft")

[node name="stairs" type="CSGPolygon3D" parent="room"]
transform = Transform3D(-0.0285618, 0.00574896, -1.99979, 0.606545, 1.90581, -0.00318416, 1.90559, -0.606526, -0.0289602, -13.4826, 6.43693, 0.345867)
use_collision = true
polygon = PackedVector2Array(0.110841, -1.10753, -3.75221, 0.106475, 0.741817, 0.576517, 0.451286, -0.167516)
material = SubResource("StandardMaterial3D_lfe3c")

[node name="door" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8, 9.4, -6.9991)

[node name="wooden_door" parent="door" instance=ExtResource("9_dlhrp")]
transform = Transform3D(-2.3167e-08, 0, -0.4, 0, 0.45, 0, 0.53, 0, -1.74846e-08, -0.0228157, -1.35684, -0.821079)

[node name="door" type="CSGBox3D" parent="door/wooden_door"]
transform = Transform3D(-8.74228e-08, 0, 2, 0, 2.22222, 0, -2.5, 0, -1.09278e-07, 0.00955486, 3.04991, -0.0138206)
visible = false
use_collision = true
size = Vector3(0.0398256, 2.72565, 1.64973)

[node name="DoorAnimation" type="AnimationPlayer" parent="door"]
libraries = {
"": SubResource("AnimationLibrary_3ydte")
}

[node name="A_DoorOpen" type="AudioStreamPlayer3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.46013)
stream = ExtResource("8_lixon")
volume_db = -13.333

[node name="E_OpenDoorSlow" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.4478, 8.86516, 1.98057)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="E_OpenDoorSlow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0763655, 0.200584, 0.0118024)
shape = SubResource("BoxShape3D_4uh4a")

[node name="modern_ceiling_lamp" parent="." instance=ExtResource("9_gi00w")]
transform = Transform3D(0.009, 0, 0, 0, 0.009, 0, 0, 0, 0.009, 1.53177, 12.061, -3.52158)

[node name="OmniLight3D" type="OmniLight3D" parent="modern_ceiling_lamp"]
transform = Transform3D(111.111, 0, 0, 0, 111.111, 0, 0, 0, 111.111, -0.529785, -101.887, 2.39804)
light_energy = 1.03
omni_range = 9.565
omni_attenuation = 0.965935

[node name="antique_chandelier" parent="." instance=ExtResource("10_tw5j8")]
transform = Transform3D(0.002, 0, 0, 0, 0.002, 0, 0, 0, 0.002, -7.77503, 10.1778, -2.57493)

[node name="OmniLight3D" type="OmniLight3D" parent="antique_chandelier"]
transform = Transform3D(500, 0, 0, 0, 500, 0, 0, 0, 500, 0, 453.308, 0)
omni_range = 10.548
omni_attenuation = 0.965936

[node name="bed" parent="." instance=ExtResource("11_e8ajb")]
transform = Transform3D(-5.24537e-08, 0, -1.2, 0, 1.2, 0, 1.2, 0, -5.24537e-08, -1.33508, 7.95544, 2.15348)

[node name="CSGBox3D" type="CSGBox3D" parent="bed"]
transform = Transform3D(1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0.235381, 0)
visible = false
use_collision = true
size = Vector3(2.45203, 0.513586, 1.2933)

[connection signal="body_entered" from="E_OpenDoorSlow" to="." method="_on_e_open_door_slow_body_entered"]
